# MentalLoad

./: CMakeLists.txt  README.md
demo/: MainWindow.cpp  MainWindow.h
src/plugin/: LoadTimelineWidgetPlugin.cpp  LoadTimelineWidgetPlugin.h
src/widget/: LoadTimelineWidget.cpp  LoadTimelineWidget.h
